Adds GC logging flags