@@ -109,7 +109,9 @@
                       :bytes (.trim (:out (clojure.java.shell/sh
                                             "git" "rev-parse" "HEAD")))})}]
   :profiles {:test-log {:jvm-opts
-                        ["-Dlog4j.configuration=log4j-test.properties"]}
+                        ["-Dlog4j.configuration=log4j-test.properties"
+                         "-XX:+PrintGCDetails"
+                         "-XX:+PrintGCTimeStamps"]}
              :test-repl {:jvm-opts
                          ["-Dlog4j.configuration=log4j-repl.properties"]}
              :test {:jvm-opts
